Run tests by annotating them as tests; various polish